--- a/_config.yml
+++ b/_config.yml
@@ -144,12 +144,12 @@ newsletter:
 # -----------------------------------------------------------------------------
 
 collections:
-  books:
+  """books:
     output: true
   news:
     defaults:
       layout: post
-    output: true
+    output: true"""
   projects:
     output: true
 
