--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -4,7 +4,7 @@
     - name: Name
       value: Deanna DiMonte
     - name: E-mail
-      value: ded@u.northwestern.edu
+      value: "[ded@u.northwestern.edu](mailto:ded@u.northwestern.edu)"
     - name: Summary
       value: PhD candidate in Electrical Engineering specializing in image processing, machine learning, and AI ethics. Motivated to improve the world by enhancing human interactivity with digital media and passionate about contributing to interdisciplinary projects that address societal challenges and create meaningful, lasting impact.
 
