--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -23,7 +23,7 @@
       institution: Purdue University, West Lafayette, IN, USA
       year: 2017
 
-- title: Experience
+- title: Leadership Experience
   type: time_table
   contents:
     - title: SICSS-IAS Participant
