--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -55,6 +55,14 @@
       description:
         - Represented Northwestern University in global forum discussing the benefits and risks of AI in higher education.
         - Engaged in cross-cultural discussions and presentations, culminating in actionable summaries and recommendations presented to university leaders, informing strategic decisions on AI integration in higher education.
+    - title: Women in Science and Engineering Research Publicity Chair
+      institution: Northwestern University, Evanston, IL, USA
+      year: 2020-2022
+      description:
+        - Conceptualized and hosted STEM events to increase graduate student engagement and cross-disciplinary networking.
+        - Created weekly newsletters and flyers to keep the community informed about upcoming events and opportunities.
+        - Collaborated with student organizations to host events and cross-promote activities, fostering a cohesive community.
+
       
 - title: Open Source Projects
   type: time_table
