--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -14,6 +14,10 @@ jobs:
   check:
     # available images: https://github.com/actions/runner-images#available-images
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+      
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
