--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -50,8 +50,8 @@
       description:
         - Assisted 60-100 graduate students in machine learning, deep learning, and reinforcement learning courses.
         - Conducted weekly meetings to mentor students on content, homework, and projects, fostering a deeper understanding of machine learning concepts and breadth of applications, and enhancing debugging and presentation skills.
-    - title: "yo-yo"
-      year: 2020
+    - title: "U7+ Worldwide Student Forum: AI in Higher Education Participant"
+      year: 2024
 
 - title: Research Experience
   type: time_table
