--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -134,6 +134,10 @@
         - Developed image processing and machine learning models to recover exoplanet atmospheric spectra from noisy simulated data for ESA’s upcoming Ariel mission.
     - title: "1M-Deepfakes Detection Challenge"
       year: 2024-2025
+      description:
+        - "Developed robust deep learning model for temporal forgery localization, leveraging misalignment between visual and auditory information, and minimizing reliance on visual features susceptible to degradation from compression."
+    - title: "Women in AI Challenge: Detect AI vs. Human-Generated Images"
+      year: 2025
 
 - title: Honors and Awards
   type: time_table
