--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -83,8 +83,24 @@
       institution: ComEd
       year: 2016
       description:
+        - Learned about power industry and substation design through research and fieldwork.
         - Presented comprehensive report on preemptive wildlife mitigation methods to administrators to prevent outages.
-
+    - title: IT Intern
+      institution: Boeing
+      year: 2015
+      description:
+        - Developed file reconciliation program for upcoming external audits using C++ and SQL with feedback from users and code reviews.
+    - title: Physics Teacher’s Assistant 
+      institution: Purdue University, West Lafayette, Indiana
+      year: 2014-2015
+      description:
+        - Taught Physics visualization coding lab.
+    - title: Summer Camp Instructor
+      institution: Joliet Junior College
+      year: 2013-2014
+      description:
+        - Teacher or Teacher’s Assistant for multiple summer programs including Robotics, Photography, and App Development.
+      
 - title: Research Experience
   type: time_table
   contents:
@@ -178,7 +194,7 @@
 - title: Awards
   type: time_table
   contents:
-    - title: NICO Data Science Fellowship
+    - title: NICO Data Science Fellowship 
       year: 2019-2020
-    - title: IDEAS NSF Fellowship
+    - title: IDEAS NSF Fellowship 
       year: 2020-2021
