--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -125,6 +125,16 @@
       year: 2020
       items:
         - Designed a 3D convolutional neural network to interpolate the growth of a 3D scanned ant bivouac structure.
+    - title: AI Research Fellow
+      institution: Handshake
+      year: 2025
+      items:
+        - Participated in selective AI fellowship developing advanced benchmarks and evaluation methodologies for next-generation AI systems.
+    - title: AI Model Trainer - Machine Learning Expert
+      institution: Outlier
+      year: 2025
+      items:
+        - "Contributed to Humanity's Last Exam, developing PhD-level benchmark questions to test frontier AI reasoning capabilities"
     - title: Data Science Intern
       institution: FAME Computer Vision Systems
       year: 2022-2023
